upgrade update_data method
