# dist/swagger/swagger.json
@@ -2895,6 +2895,60 @@
                 }
             }
         },
+        "/api/v1/update_platform_token": {
+            "post": {
+                "operationId": "UpdateBosTokenInAuthPlatform",
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "anyOf": [
+                                        {
+                                            "properties": {
+                                                "code": {
+                                                    "type": "number",
+                                                    "format": "double"
+                                                },
+                                                "token": {
+                                                    "type": "string"
+                                                }
+                                            },
+                                            "required": [
+                                                "code",
+                                                "token"
+                                            ],
+                                            "type": "object"
+                                        },
+                                        {
+                                            "properties": {
+                                                "message": {
+                                                    "type": "string"
+                                                }
+                                            },
+                                            "required": [
+                                                "message"
+                                            ],
+                                            "type": "object"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "Auth"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "parameters": []
+            }
+        },
         "/api/v1/get_bos_to_auth_credential": {
             "get": {
                 "operationId": "GetBosToAdminCredential",
